# blog

./: .gitignore  README.md  blog.cabal  hie.yaml
app/: Assertions.hs  Config.hs  GitHub.hs  LucidUtils.hs  Main.hs  Page.hs  PageSpecs.hs  Templates.hs
content/: about.md  contact.md  home.md  publications.md  teaching.md  upcoming.md
content/posts/arrow-aus/body/: 0-intro.md  1-aus.md  1b-aus.md  1c-aus.md  2a-iia.md  2b-arrow.md  2c-condorcet.md  2d-condorcet.md  3-discussion.md  3b-discussion.md  4-addendum.md
content/posts/arrow-aus/footnotes/: ft1.md  ft2.md  ft3.md  ft4.md  ft5.md  ft6.md  ft8.md  ft9.md
content/posts/example/body/: intro.md
content/posts/example/body/section1/: 1.md
content/posts/example/body/section2/: 1.md  2.md
content/posts/example/footnotes/: ft1.md  ft2.md
content/posts/how-this-website-was-made/body/: 0-intro.md  1-the-requirements.md  2-functional-templating.md  3-minimising-frameworks.md  4-comments.md  5-dark-light-mode.md  6-looks.md  7-code-blocks-and-math.md  8-hosting.md
content/posts/how-this-website-was-made/footnotes/: ft1.md  ft2.md  ft3.md
content/posts/htmx-served-on-the-browser-wasm/body/: 0-intro.md  1-the-project.md  2-preview.html  3-the-solution.md  4-conclusion.md
content/posts/lucid-htmx-servant-combo/body/: 0-intro.md  1-what-is-a-vomit-draft-editor.md  2-preview.html  3-what-is-a-vomit-draft-editor-pt2.md  4-the-solution.md  4.5-the-solution.md  5-point-of-the-stack.md  6-lucid.md  7-servant.md  8-whats-missing.md  9-conclusion.md
content/posts/lucid-htmx-servant-combo/footnotes/: ft1.md  ft2.md  ft3.md  ft4.md  ft5.md  ft6.md
content/posts/rp2-cylinder/body/: 0-intro.md  1-intro-pt2.md  1-intro-pt3.md  2-rp2.md  proof1.md  proof2.md  proof3.md
content/posts/rp2-cylinder/body/static/: klein-construction.html
content/posts/rp2-cylinder/footnotes/: ft1.md  ft2.md  ft3.md
content/posts/simple-htbuilder-htmx-fastapi-combo/body/: 0-intro.md  1-what-is-htmx.md  10-htbuilder-tricks.md  11-css.md  12-extras.md  2-what-is-htbuilder.md  3-fastapi.md  4-demo-intro.md  5-preview.html  6-demo-intro-2.md  7-session-state.md  8-updating-mutliple-elements.md  9-conclusion.md
content/posts/simple-htbuilder-htmx-fastapi-combo/footnotes/: ft-0.md  ft-1.md
static/: dark-theme.css  highlight.default.min.css  light-theme.css  main.js  skeleton.css  style.css  theme-switcher.js
