cabal-version:      2.4
name:               blog
version:            0.1.0.0
author:             Ori Livson
maintainer:         ori.livson@gmail.com

executable blog
    main-is:          Main.hs
    build-depends:
        aeson,
        base ^>=4.16.4.0,
        binary,
        bytestring,
        cheapskate,
        cheapskate-lucid,
        containers,
        directory,
        dir-traverse,
        filepath,
        http-conduit,
        lucid,
        lucid-svg,
        servant-lucid,
        servant-server,
        text,
        time,
        wai,
        warp,
        wai-extra

    default-extensions:
        DataKinds
        OverloadedStrings
        DeriveGeneric
        GADTs
        TypeOperators
        FlexibleInstances
        MultiParamTypeClasses
        InstanceSigs
        RankNTypes
        RecordWildCards
        NamedFieldPuns
        OverloadedLists

    other-modules: Page PageSpecs Templates GitHub

    ghc-options:
        -Wall

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010
