cabal-version: 2.4
name: blog
version: 0.1.0.0
author: Ori Livson
maintainer: ori.livson.blog@gmail.com

flag dev
  description: Enable development mode
  default: False

flag no-comments
  description: Enable development mode
  default: False

executable blog
  main-is: Main.hs
  build-depends:
    aeson,
    base,
    binary,
    commonmark,
    commonmark-extensions,
    containers,
    dir-traverse,
    directory,
    filepath,
    http-conduit,
    lucid,
    lucid-svg,
    pandoc,
    text,
    time,

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GADTs
    InstanceSigs
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLists
    OverloadedStrings
    RankNTypes
    RecordWildCards
    TypeOperators

  other-modules:
    Config
    GitHub
    LucidUtils
    PageSpecs
    Templates

  ghc-options:
    -Wall

  hs-source-dirs: app
  default-language: Haskell2010

  if flag(dev)
    cpp-options: -DDEV_MODE
  else
    cpp-options: -DPROD_MODE

  if flag(no-comments)
    cpp-options: -DNO_COMMENTS
  else
    cpp-options: -DCOMMENTS
